add route app file creating DAO:money user group

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         },
 
         "autoload":{
-        "psr-4": {"MicroCMS\\": "src"}
+        "psr-4": {"FriendlySold\\": "src"}
         }
 
 
